Closed Bug 419326 Opened 17 years ago Closed 17 years ago

Crashes in Main Tab of Options [@ _wgetdcwd - nsLocalFile::Normalize]

Categories

(Core :: XPCOM, defect, P2)

x86
Windows Vista
defect

Tracking

()

VERIFIED FIXED
mozilla1.9beta5

People

(Reporter: u301601, Assigned: timeless)

References

Details

(Keywords: crash)

Crash Data

Attachments

(3 files, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.1.12) Gecko/20080201 Firefox/2.0.0.12 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.1.12) Gecko/20080201 Firefox/2.0.0.12 Mozilla Firefox 3.0b3 crashes after attempting to change settings in the 'MAIN' tab. This error occurs only if you automatically save downloads to your computer, and the directory or drive of that location does not exist. For example, you set Firefox to automatically save downloads to 'Drive J:', but you remove that drive. If you attempt to change the settings, Firefox will crash. Reproducible: Always Steps to Reproduce: 1. Insert any removable drive. You can also select another Partition on your hard drive. Note the drive Letter. 2. In Firefox, go to Tools > Options > Main Tab 3. Choose 'Save Files to:' and Select the Drive Letter noted in Step One. Close Options. Close Firefox 4. Unplug or remove the removable drive in step one. If you chose a partition, remove the drive letter. 5. Run Firefox. Go to Tools > Options > Main Tab. 6. Firefox will have crashed. It will prompt you to restart Actual Results: Firefox crashes Expected Results: You should be able to change options as usual
Please don't cc the world on a bug just because.
Keywords: qawanted
Version: unspecified → Trunk
Hm, maybe someone else has better crash reports. Always trouble with this computer.
Flags: blocking-firefox3?
Keywords: crash
My crash report came out the same as your Ria.
The crash seems to be an assert within the crt
We have a bug filed on breakpad to report these more effectively, it's probably the "invalid parameter handler" in the CRT, which gets called when you pass a bad parameter to a CRT method. We do get some extra assertion info in the crash report that we're not currently reporting.
Suggest low priority blocker for now, as I don't think this is a very common use case. I'd look into timeout problems, maybe, as Windows can take a REALLY long time to return the file chooser here. --> Core::
Component: Download Manager → File Handling
Flags: blocking-firefox3?
Priority: -- → P3
Product: Firefox → Core
QA Contact: download.manager → file-handling
Flags: blocking1.9?
I tested this with a simple USB stick, something that I use every day to transport data to another computer. The user might not understand that plugging in that thing is the only way to stop the crashes.
this isn't really a regression, it's a feature of moving to msvcrt8. http://msdn2.microsoft.com/en-us/library/7t2zk3s4.aspx
Component: File Handling → XPCOM
Keywords: regression
QA Contact: file-handling → xpcom
Summary: Crashes in Main Tab of Options → Crashes in Main Tab of Options [@ _wgetdcwd - nsLocalFile::Normalize]
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #306125 - Flags: review?(ted.mielczarek)
Attachment #306125 - Flags: approval1.9b4?
Attachment #306125 - Flags: approval1.9?
Attached patch throw...Splinter Review
Attachment #306125 - Attachment is obsolete: true
Attachment #306132 - Flags: review?
Attachment #306132 - Flags: approval1.9b4?
Attachment #306132 - Flags: approval1.9?
Attachment #306125 - Flags: review?(ted.mielczarek)
Attachment #306125 - Flags: approval1.9b4?
Attachment #306125 - Flags: approval1.9?
Attachment #306132 - Flags: review? → review?(benjamin)
Here's a real simple testcase: z=Components.Constructor("@mozilla.org/file/local;1","nsILocalFile","initWithPath")("z:.\\test"); z.normalize(); This crashes without this patch, and throws with it. (I don't have a Z drive, which is the point.) Ideally we'd have a crashtest that iterated through A..Z and did this for each one.
Also, this might still break stuff (some JS somewhere might need to catch this exception), but it will prevent the crash.
Flags: tracking1.9? → blocking1.9?
Comment on attachment 306132 [details] [diff] [review] throw... reviews before approval requests, please! this won't block beta 4
Attachment #306132 - Flags: approval1.9b4?
Attachment #306132 - Flags: approval1.9?
Flags: blocking1.9? → blocking1.9+
Priority: P3 → P2
Comment on attachment 306132 [details] [diff] [review] throw... unit-test please!
Attachment #306132 - Flags: review?(benjamin)
Attached patch .Splinter Review
Attachment #307399 - Flags: review?(benjamin)
Attachment #307399 - Flags: review?(benjamin) → review+
Attachment #306132 - Flags: review+
Comment on attachment 306132 [details] [diff] [review] throw... mozilla/xpcom/io/nsLocalFileWin.cpp 1.183
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta5
Comment on attachment 307399 [details] [diff] [review] . mozilla/xpcom/tests/unit/test_localfile.js 1.2
Status: RESOLVED → VERIFIED
Crash Signature: [@ _wgetdcwd - nsLocalFile::Normalize]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: