Bug 419326 Crashes in Main Tab of Options [@ _wgetdcwd - nsLocalFile::Normalize] r=bsmedberg a=beltzner